Adding scss files

--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@
 <body>
 
     
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script>
-        // link jQuery
+        
         // Document Ready
+        $(document).ready(function () {
+            // all jQuery code here    
+
+
+            });
     </script>
 </body>
 </html>
