--- a/index2.html
+++ b/index2.html
@@ -1,75 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>INDEX 2</title>
-    <link href="https://fonts.googleapis.com/css?family=Mogra&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Fira+Sans:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
-    <div class="wrapper">
-        <header>
+    <header>
+        <div class="wrapper">
             <div class="logo"></div>
             <h1>Fabio Dwyer</h1>
             <h2>Mood Soundtrack Generator:</h2>
+        </div>
         </header>
 
-        <main>
+        <main class="wrapper">
             <h3>Instructions:</h3>
             <ol>
                 <li>Turn your speakers on. Loud!</li>
                 <li>Just click the button below.</li>
-                <li>Choose an option that better describes your current mood and I'll give you a good soundtrack for your moment.
+                <li>Choose an option that better describes your current mood and I'll give you a good soundtrack for
+                    your moment.
                 </li>
             </ol>
             <div class="dropdown">
                 <button onclick="myFunction()" class="dropbtn">Soundtrack Generator</button>
-                <div id="myDropdown" class="dropdown-content">
+                <div id="myDropdown" class="dropdownContent">
                     <ul>
-                        <li onclick="songOne(true)" id="rock">Play Rock</li>
-                        <li onclick="songTwo(true)" id="latin">Play Latin</li>
-                        <li onclick="songThree(true)" id="blues">Play Blues</li>
+                        <li onclick="songOne(true)" id="rock">🚀 I'm starting my day, I need a kick in the butt!!</li>
+                        <li onclick="songTwo(true)" id="latin">💘 I'm in love, gimme some sexy latin sugar, baby!</li>
+                        <li onclick="songThree(true)" id="blues">😥 I feel like I'm lost in the desert. And my horse left me...</li>
                     </ul>
                 </div>
             </div>
-        </main>
-    </div>
-    <!-- End of wrapper -->
+        </main> <!-- End of wrapper -->
+
     <footer>
-        <p>All music written and performed by Fabio Dwyer</p>
-        <h6>&copy; Copyrights Reserved</h6>
+        <div class="wrapper">
+            <div class="text">
+                <p>🎵 All music written and performed by Fabio Dwyer</p>
+            </div>
+            <div class="text">
+                <p>💻 Page designed and developed by Fabio Dwyer</p>
+            </div>
+            <div class="bottomFooter">
+                <h6>&copy; Copyrights Reserved</h6>
+            </div>
+        </div>
     </footer>
 
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 
     <script>
-    // $(document).ready(function () {
-    //     console.log('ready');
+        // $(document).ready(function () {
+        //     console.log('ready');
 
-    // Dropdown Menu:
-    /* When the user clicks on the button,
-    toggle between hiding and showing the dropdown content */
+        // Dropdown Menu:
+        /* When the user clicks on the button,
+        toggle between hiding and showing the dropdown content */
         function myFunction() {
             document.getElementById("myDropdown").classList.toggle("show");
         }
 
-    // Close the dropdown menu if the user clicks outside of it
+        // Close the dropdown menu if the user clicks outside of it
         window.onclick = function (event) {
             if (!event.target.matches('.dropbtn')) {
-                let dropdowns = document.getElementsByClassName("dropdown-content");
+                let dropdowns = document.getElementsByClassName("dropdownContent");
                 let i;
                 for (i = 0; i < dropdowns.length; i++) {
                     let openDropdown = dropdowns[i];
                     if (openDropdown.classList.contains('show')) {
-                    openDropdown.classList.remove('show');
+                        openDropdown.classList.remove('show');
+                    }
                 }
             }
         }
-    }     
 
-    // Audio JS:
+        // Audio JS:
         function songOne(autoplay) {
             const playlist = document.createElement("AUDIO");
             playlist.setAttribute("id", "rock");
@@ -125,6 +138,5 @@
 
     // })
     </script>
-
 </body>
 </html>
