--- a/index2.html
+++ b/index2.html
@@ -18,47 +18,48 @@
             <h1>Fabio Dwyer</h1>
             <h2>Mood Soundtrack Generator:</h2>
         </div>
-        </header>
+    </header>
 
-        <main class="wrapper">
-            <h3>Instructions:</h3>
-            <ol>
-                <li>Turn your speakers on. Loud!</li>
-                <li>Just click the button below.</li>
-                <li>Choose an option that better describes your current mood and I'll give you a good soundtrack for
-                    your moment.
-                </li>
-            </ol>
-            <div class="dropdown">
-                <button onclick="myFunction()" class="dropbtn">Soundtrack Generator</button>
-                <div id="myDropdown" class="dropdownContent">
-                    <ul>
-                        <li onclick="songOne(true)" id="rock">🚀 I'm starting my day, I need a kick in the butt!!</li>
-                        <li onclick="songTwo(true)" id="latin">💘 I'm in love, gimme some sexy latin sugar, baby!</li>
-                        <li onclick="songThree(true)" id="blues">😥 I feel like I'm lost in the desert. And my horse left me...</li>
-                    </ul>
-                </div>
-            </div>
-        </main> <!-- End of wrapper -->
-
-    <footer>
-        <div class="wrapper">
-            <div class="text">
-                <p>🎵 All music written and performed by Fabio Dwyer</p>
-            </div>
-            <div class="text">
-                <p>💻 Page designed and developed by Fabio Dwyer</p>
-            </div>
-            <div class="bottomFooter">
-                <h6>&copy; Copyrights Reserved</h6>
+    <main class="wrapper">
+        <h3>Instructions:</h3>
+        <ol>
+            <li>Turn your speakers on. Loud!</li>
+            <li>Just click the button below.</li>
+            <li>Choose an option that better describes your current mood and I'll give you a good soundtrack for
+                your moment.
+            </li>
+        </ol>
+        <div class="dropdown">
+            <button onclick="myFunction()" class="dropbtn">Soundtrack Generator</button>
+            <div id="myDropdown" class="dropdownContent">
+                <ul>
+                    <li onclick="rockSong(true)" id="rock">🚀 I'm starting my day, I need a kick in the butt!!</li>
+                    <li onclick="latinSong(true)" id="latin">💘 I'm in love, gimme some sexy latin sugar, baby!</li>
+                    <li onclick="bluesSong(true)" id="blues">😥 I feel like I'm lost in the desert. And my horse left
+                        me...</li>
+                </ul>
             </div>
         </div>
+    </main> <!-- End of wrapper -->
+
+    <footer>
+        <!-- <div class="wrapper">
+            <div class="text"> -->
+        <p>🎵 All music written and performed by Fabio Dwyer</p>
+        <!-- </div>
+            <div class="text"> -->
+        <p>💻 Page designed and developed by Fabio Dwyer</p>
+        <!-- </div>
+            <div class="bottomFooter"> -->
+        <h6>&copy; Copyrights Reserved</h6>
+        <!-- </div>
+        </div> -->
     </footer>
 
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 
     <script>
-        // $(document).ready(function () {
+        // $(function () {
         //     console.log('ready');
 
         // Dropdown Menu:
@@ -83,7 +84,7 @@
         }
 
         // Audio JS:
-        function songOne(autoplay) {
+        function rockSong(autoplay) {
             const playlist = document.createElement("AUDIO");
             playlist.setAttribute("id", "rock");
             playlist.setAttribute("controls", "controls");
@@ -93,7 +94,6 @@
             rock.setAttribute("type", "audio/mpeg");
             playlist.appendChild(rock);
 
-
             // Set the autoplay property:
             playlist.autoplay = true;
 
@@ -101,7 +101,7 @@
         }
 
         // songTwo
-        function songTwo(autoplay) {
+        function latinSong(autoplay) {
             const playlist = document.createElement("AUDIO");
             playlist.setAttribute("id", "latin");
             playlist.setAttribute("controls", "controls");
@@ -118,7 +118,7 @@
         }
 
         // songThree
-        function songThree(autoplay) {
+        function bluesSong(autoplay) {
             const playlist = document.createElement("AUDIO");
             playlist.setAttribute("id", "blues");
             playlist.setAttribute("controls", "controls");
