--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         // Audio JS:
         function rockSong(autoplay) {
             const playlist = document.createElement("AUDIO");
-            playlist.setAttribute("id", "rock");
+            // playlist.setAttribute("id", "rock");
             playlist.setAttribute("controls", "controls");
 
             const rock = document.createElement("SOURCE");
@@ -103,7 +103,7 @@
         // songTwo
         function latinSong(autoplay) {
             const playlist = document.createElement("AUDIO");
-            playlist.setAttribute("id", "latin");
+            // playlist.setAttribute("id", "latin");
             playlist.setAttribute("controls", "controls");
 
             const latin = document.createElement("SOURCE");
@@ -120,11 +120,11 @@
         // songThree
         function bluesSong(autoplay) {
             const playlist = document.createElement("AUDIO");
-            playlist.setAttribute("id", "blues");
+            // playlist.setAttribute("id", "blues");
             playlist.setAttribute("controls", "controls");
 
             const blues = document.createElement("SOURCE");
-            blues.setAttribute("src", "./assets/audioFiles/03duel.mp3");
+            blues.setAttribute("src", "./assets/audioFiles/03blues.mp3");
             blues.setAttribute("type", "audio/mpeg");
             playlist.appendChild(blues);
 
