Monday work begins

--- a/index3.html
+++ b/index3.html
@@ -75,7 +75,7 @@
 
     <script>
         // $(function () {
-        //     console.log('ready');
+        //  widgetApp.init();  
 
         // Dropdown Menu:
         /* When the user clicks on the button,
@@ -171,11 +171,13 @@
 
         //     document.body.appendChild(playlist);
         // }
-
+        
+/////////////////////////////////////////////////////////////////////////
     // Original Code working:
+    // Audio JS:
     // function rockSong(autoplay) {
     //     const playlist = document.createElement("AUDIO");
-    //     playlist.setAttribute("id", "rock");
+    //     // playlist.setAttribute("id", "playlist");
     //     playlist.setAttribute("controls", "controls");
 
     //     const rock = document.createElement("SOURCE");
@@ -192,7 +194,7 @@
     // // songTwo
     // function latinSong(autoplay) {
     //     const playlist = document.createElement("AUDIO");
-    //     playlist.setAttribute("id", "latin");
+    //     // playlist.setAttribute("id", "latin");
     //     playlist.setAttribute("controls", "controls");
 
     //     const latin = document.createElement("SOURCE");
@@ -209,11 +211,11 @@
     // // songThree
     // function bluesSong(autoplay) {
     //     const playlist = document.createElement("AUDIO");
-    //     playlist.setAttribute("id", "blues");
+    //     // playlist.setAttribute("id", "blues");
     //     playlist.setAttribute("controls", "controls");
 
     //     const blues = document.createElement("SOURCE");
-    //     blues.setAttribute("src", "./assets/audioFiles/03duel.mp3");
+    //     blues.setAttribute("src", "./assets/audioFiles/03blues.mp3");
     //     blues.setAttribute("type", "audio/mpeg");
     //     playlist.appendChild(blues);
 
