--- a/indexBackUp-don't touch this/index.html
+++ b/indexBackUp-don't touch this/index.html
@@ -39,7 +39,6 @@
                 </ul>
             </div>
         </div>
-        <div class="playerContainer"></div>
     </main> <!-- End of wrapper -->
 
     <footer>
@@ -60,6 +59,7 @@
 
     <script>
         // $(document).ready(function() {
+        //      widgetApp.init();
 
         // Dropdown Menu:
         /* When the user clicks on the button,
@@ -94,7 +94,7 @@
             playlist.appendChild(rock);
 
             // Set the autoplay property:
-            playlist.autoplay = autoplay;
+            playlist.autoplay = true;
 
             document.body.appendChild(playlist);
         }
@@ -111,7 +111,7 @@
             playlist.appendChild(latin);
 
             // Set the autoplay property:
-            playlist.autoplay = autoplay;
+            playlist.autoplay = true;
 
             document.body.appendChild(playlist);
         }
@@ -134,7 +134,6 @@
         }
         // End of songThree
 
-        // don't append to the body, append to main (it didn't work!!)
 
     // });
     </script>
