--- a/indexJQuery.html
+++ b/indexJQuery.html
@@ -35,11 +35,11 @@
                 <ul>
                     <li onclick="rockSong(true)" id="rock">🚀 I'm starting my day, I need a kick in the butt!!</li>
                     <li onclick="latinSong(true)" id="latin">💘 I'm in love, gimme some sexy latin sugar, baby!</li>
-                    <li onclick="bluesSong(true)" id="blues">😥 I feel like I'm lost in the desert. And my horse left me...</li>
+                    <li onclick="bluesSong(true)" id="blues">😥 I feel like I'm lost in the desert. And my horse left
+                        me...</li>
                 </ul>
             </div>
         </div>
-        <div class="playerContainer"></div>
     </main> <!-- End of wrapper -->
 
     <footer>
@@ -60,6 +60,7 @@
 
     <script>
         // $(document).ready(function() {
+        //      widgetApp.init();
 
         // Dropdown Menu:
         /* When the user clicks on the button,
@@ -134,9 +135,10 @@
         }
         // End of songThree
 
-        // don't append to the body, append to main (it didn't work!!)
+        // don't append to the body, append to main
 
     // });
     </script>
 </body>
+
 </html>
