--- a/indexJQuery.html
+++ b/indexJQuery.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Mood Soundtrack Generator</title>
+    <title>jQuery-Mood Soundtrack Generator</title>
     <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Fira+Sans:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
@@ -30,7 +30,7 @@
             </li>
         </ol>
         <div class="dropdown">
-            <button onclick="myFunction()" class="dropbtn">Soundtrack Generator</button>
+            <button class="dropbtn">Soundtrack Generator</button>
             <div id="myDropdown" class="dropdownContent">
                 <ul>
                     <li onclick="rockSong(true)" id="rock">🚀 I'm starting my day, I need a kick in the butt!!</li>
@@ -65,10 +65,10 @@
         // Dropdown Menu:
         /* When the user clicks on the button,
         toggle between hiding and showing the dropdown content */
-        function myFunction() {
-            document.getElementById("myDropdown").classList.toggle("show");
-        }
-
+        // function myFunction() {
+        //     document.getElementById("myDropdown").classList.toggle("show");
+        // }
+        
         // Close the dropdown menu if the user clicks outside of it
         window.onclick = function (event) {
             if (!event.target.matches('.dropbtn')) {
@@ -82,6 +82,11 @@
                 }
             }
         }
+
+            $('.dropbtn').on('click', function () {
+                $('.dropdownContent').toggleClass('show');
+            });
+            
 
         // Audio JS:
         function rockSong(autoplay) {
